--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -4,5 +4,5 @@ structure:
   readme: README.md
   summary: SUMMARY.md
 
-redirects:
-  previous/page: new-folder/page.md
+# redirects:
+#   previous/page: new-folder/page.md
